Setup Gulp.js and other dependencies.

--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,8 @@
 {
   "name": "josean-portfolio",
-  "version": "0.0.0",
-  "license": "MIT",
   "private": true,
   "dependencies": {
     "jquery": "1.10.x",
-    "bootstrap": "latest"
+    "bootstrap": "~3.2.0"
   }
 }
