--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "jquery": "1.10.x",
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "startbootstrap": "latest"
   }
 }
