Refactor stylesheets and build scripts to include Bootstrap in Sass compiled output. - Include bootstrap.scss in main.scss to make use of variables - Change bower bootstrap to bootstrap-sass - Update included styles and scripts in index.html - Remove local font-awesome and use cdn instead - Combine Google Fonts api calls into single linked css

--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "private": true,
   "dependencies": {
     "jquery": "1.10.x",
-    "bootstrap": "~3.2.0",
+    "bootstrap-sass": "~3.2.0",
     "startbootstrap": "latest"
   }
 }
