--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "homepage": "https://joseanarroyo.github.io",
   "devDependencies": {
     "gulp": "~3.8.8",
-    "gulp-sass": "~1.3.3",
-    "gulp-rename": "~1.2.0",
-    "gulp-minify-css": "~0.3.10",
-    "gulp-sourcemaps": "~1.2.2",
     "gulp-concat": "~2.4.1",
-    "gulp-connect": "~2.0.6"
+    "gulp-connect": "~2.0.6",
+    "gulp-minify-css": "~0.3.10",
+    "gulp-rename": "~1.2.0",
+    "gulp-sass": "~1.3.3",
+    "gulp-sourcemaps": "~1.2.2"
   }
 }
